more fixes of Canadians > Canadian residents

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -33,7 +33,7 @@ By the end of the chapter, readers will be able to:
 ## Canadian languages data set
 
 In this chapter, \index{Canadian languages} we will walk through a full analysis of a data set relating to
-languages spoken at home by Canadians. Many Indigenous peoples exist in Canada 
+languages spoken at home by Canadian residents. Many Indigenous peoples exist in Canada 
 with their own cultures and languages; these languages are often unique to Canada and not spoken
 anywhere else in the world [@statcan2018mothertongue]. Sadly, colonization has
 led to the loss of many of these languages. For instance, generations of
@@ -55,10 +55,10 @@ In this data, there are 214 languages recorded, each having six different proper
 
 1. `category`: Higher-level language category, describing whether the language is an Official Canadian language, an Aboriginal (i.e., Indigenous) language, or a Non-Official and Non-Aboriginal language.
 2. `language`: The name of the language.
-3. `mother_tongue`: Number of Canadians who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
-4. `most_at_home`: Number of Canadians who reported the language as being spoken most often at home.
-5. `most_at_work`: Number of Canadians who reported the language as being used most often at work.
-6. `lang_known`: Number of Canadians who reported knowledge of the language.
+3. `mother_tongue`: Number of Canadian residents who reported the language as their mother tongue. Mother tongue is generally defined as the language someone was exposed to since birth.
+4. `most_at_home`: Number of Canadian residents who reported the language as being spoken most often at home.
+5. `most_at_work`: Number of Canadian residents who reported the language as being used most often at work.
+6. `lang_known`: Number of Canadian residents who reported knowledge of the language.
 
 According to the census, more than 60 Aboriginal languages were reported
 as being spoken in Canada. Suppose we want to know which are the most common;
@@ -525,7 +525,7 @@ image_read("img/ggplot_function.jpeg") |>
   image_crop("1625x1900")
 ```
 
-```{r barplot-mother-tongue, fig.width=5, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue."}
+```{r barplot-mother-tongue, fig.width=5, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadian residents as their mother tongue."}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity")
 ```
@@ -564,7 +564,7 @@ words (e.g. `"Mother Tongue (Number of Canadian Residents)"`) as arguments to
 layers to format the plot further, and we will explore these in Chapter
 \@ref(viz).
 
-```{r barplot-mother-tongue-labs, fig.width=5, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with x and y labels."}
+```{r barplot-mother-tongue-labs, fig.width=5, fig.height=4, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadian residents as their mother tongue with x and y labels."}
 ggplot(ten_lang, aes(x = language, y = mother_tongue)) +
   geom_bar(stat = "identity") +
   xlab("Language") +
@@ -578,7 +578,7 @@ currently making it difficult to read the different language names.
 One solution is to rotate the plot such that the bars are horizontal rather than vertical.
 To accomplish this, we will swap the x and y coordinate axes:
 
-```{r barplot-mother-tongue-flipped, fig.width=5, fig.height=3, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue."}
+```{r barplot-mother-tongue-flipped, fig.width=5, fig.height=3, warning=FALSE, fig.cap = "Horizontal bar plot of the ten Aboriginal languages most often reported by Canadian residents as their mother tongue."}
 ggplot(ten_lang, aes(x = mother_tongue, y = language)) +
   geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadian Residents)") +
@@ -594,7 +594,7 @@ each language, rather than in alphabetical order. We can reorder the bars using
 the `reorder` \index{reorder} function, which orders a variable (here `language`) based on the
 values of the second variable (`mother_tongue`). 
 
-```{r barplot-mother-tongue-reorder, fig.width=5, fig.height=3, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue with bars reordered."}
+```{r barplot-mother-tongue-reorder, fig.width=5, fig.height=3, warning=FALSE, fig.cap = "Bar plot of the ten Aboriginal languages most often reported by Canadian residents as their mother tongue with bars reordered."}
 ggplot(ten_lang, aes(x = mother_tongue,
                      y = reorder(language, mother_tongue))) +
   geom_bar(stat = "identity") +
@@ -630,7 +630,7 @@ of code for others, and perhaps more importantly, your future self!
 It's good practice to get in the habit of
 commenting your code to improve its readability.
 
-```{r nachos-to-cheesecake, fig.width=5, fig.height=3, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: bar plot of the ten Aboriginal languages most often reported by Canadians as their mother tongue."}
+```{r nachos-to-cheesecake, fig.width=5, fig.height=3, warning=FALSE, message=FALSE, fig.cap = "Putting it all together: bar plot of the ten Aboriginal languages most often reported by Canadian residents as their mother tongue."}
 library(tidyverse)
 
 # load the data set
