fixed figures sizes in reading

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -541,8 +541,9 @@ on the right, the first two lines of the output indicate the source is SQL. The
 last line doesn't show how many rows there are (R is trying to avoid performing
 expensive query operations), whereas the output for the `tibble` object does. 
 
-```{r 01-ref-vs-tibble, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparison of a reference to data in a database and a tibble in R.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/ref_vs_tibble.jpeg")
+```{r 01-ref-vs-tibble, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Comparison of a reference to data in a database and a tibble in R.", fig.retina = 2, out.width="80%"}
+image_read("img/ref_vs_tibble/ref_vs_tibble.001.jpeg") |>
+  image_crop("3632x1600")
 ```
 
 We can look at the SQL commands that are sent to the database when we write 
