fixed figure sizes for wrangling

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -362,7 +362,8 @@ use the `tidyverse` function, `pivot_longer`, to accomplish this data transforma
 (ref:img-pivot-longer) Syntax for the `pivot_longer` function.
 
 ``` {r img-pivot-longer, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-longer)", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/pivot_longer.jpeg")
+image_read("img/pivot_longer.jpeg") |>
+  image_crop("1625x1900")
 ```
 
 We use `pivot_longer` to combine the Toronto, Montréal,
@@ -466,7 +467,8 @@ to use the `pivot_wider` function.
 (ref:img-pivot-wider) Syntax for the `pivot_wider` function.
 
 ``` {r img-pivot-wider, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-pivot-wider)", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/pivot_wider.jpeg")
+image_read("img/pivot_wider.jpeg") |>
+  image_crop("1625x850")
 ```
 
 We will apply the function as detailed in Figure \@ref(fig:img-pivot-wider).
@@ -539,7 +541,8 @@ outlines what we need to specify to use `separate`.
 (ref:img-separate) Syntax for the `separate` function.
 
 ``` {r img-separate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-separate)", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/separate_function.jpeg")
+image_read("img/separate_function.jpeg") |>
+  image_crop("1625x1900")
 ```
 
 ``` {r}
@@ -862,7 +865,8 @@ then `mutate` would create new columns with the names we specified.
 (ref:img-mutate) Syntax for the `mutate` function.
 
 ``` {r img-mutate, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:img-mutate)",  fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/mutate_function.jpeg")
+image_read("img/mutate_function.jpeg") |>
+  image_crop("1625x1900")
 ```
 
 Below we use `mutate` to convert the columns `most_at_home` and `most_at_work`
@@ -1200,7 +1204,6 @@ or columns, as shown in Figure \@ref(fig:summarize).
 (ref:summarize) `summarize` is useful for calculating summary statistics on one or more column(s). In its simplest use case, it creates a new data frame with a single row containing the summary statistic(s) for each column being summarized. The darker, top row of each table represents the column headers.
 
 ```{r summarize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:summarize)", fig.retina = 2, out.width = "100%"}
-
 image_read("img/summarize/summarize.001.jpeg") |> 
   image_crop("2000x475+0+300")
 ```
