--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -139,7 +139,7 @@ we can easily share it with our collaborators.
 This copy is commonly referred to as \index{repository!remote} the **remote repository**.
 
 ```{r vc1-no-changes, fig.cap = 'Schematic of local and remote version control repositories.', fig.retina = 2, out.width="100%"}
-image_read("img/vc1-no-changes.png") %>%
+image_read("img/vc1-no-changes.png") |>
   image_crop("3632x2000")
 ```
 
@@ -195,7 +195,7 @@ repository (e.g., using Jupyter) and saving your work, these changes will only i
 working directory of the local repository (Figure \@ref(fig:vc2-changes)).
 
 ```{r vc2-changes, fig.cap = 'Local repository with changes to files.', fig.retina = 2, out.width="100%"}
-image_read("img/vc2-changes.png") %>%
+image_read("img/vc2-changes.png") |>
   image_crop("3632x2000")
 ```
 
@@ -213,7 +213,7 @@ that are important to the analysis project (`analysis.ipynb` and `README.md`)
 and not our personal scratch notes for the project (`notes.txt`).
 
 ```{r vc-ba2-add, fig.cap = 'Adding modified files to the staging area in the local repository.', fig.retina = 2, out.width="100%"}
-image_read("img/vc-ba2-add.png") %>%
+image_read("img/vc-ba2-add.png") |>
   image_crop("3632x1200")
 ```
 
@@ -229,7 +229,7 @@ remote repository on GitHub has not changed, and collaborators would not yet be
 able to see your new changes.
 
 ```{r vc-ba3-commit, fig.cap = "Committing the modified files in the staging area to the local repository history, with an informative message about what changed.", fig.retina = 2, out.width="100%"}
-image_read("img/vc-ba3-commit.png") %>%
+image_read("img/vc-ba3-commit.png") |>
   image_crop("3632x1100")
 ```
 
@@ -243,7 +243,7 @@ to see the changes you made. And you can also take comfort in the fact that your
 up on the cloud!
 
 ```{r vc5-push, fig.cap = 'Pushing the commit to send the changes to the remote repository on GitHub.', fig.retina = 2, out.width="100%"}
-image_read("img/vc5-push.png") %>%
+image_read("img/vc5-push.png") |>
   image_crop("3632x3000")
 ```
 
@@ -256,7 +256,7 @@ both locally and remotely. In sum, they are:
 3. **Push** the local changes too the remote version control repository
 
 ```{r vc5-5-nachos-to-cheesecake, fig.cap = 'To version changes both locally and remotely, they must be added, committed and pushed.', fig.retina = 2, out.width="100%"}
-image_read("img/vc5-5-nachos-to-cheesecake.png") %>%
+image_read("img/vc5-5-nachos-to-cheesecake.png") |>
   image_crop("3632x2000")
 ```
 -->
@@ -270,7 +270,7 @@ to share them with you. When they push their changes, those changes will only in
 the remote GitHub repository and not in your local repository (Figure \@ref(fig:vc6-remote-changes)).
 
 ```{r vc6-remote-changes, fig.cap = 'Changes pushed by collaborators, or created directly on GitHub will not be automatically sent to your local repository.', fig.retina = 2, out.width="100%"}
-image_read("img/vc6-remote-changes.png") %>%
+image_read("img/vc6-remote-changes.png") |>
   image_crop("3632x2000")
 ```
 
@@ -282,7 +282,7 @@ be able to push any more changes yourself (though you will still be able to
 work and make commits in your own local repository). 
 
 ```{r vc7-pull, fig.cap = 'Pulling changes from the remote GitHub repository to synchronize your local repository.', fig.retina = 2, out.width="100%"}
-image_read("img/vc7-pull.png") %>%
+image_read("img/vc7-pull.png") |>
   image_crop("3632x2000")
 ```
 
@@ -313,9 +313,9 @@ Figure \@ref(fig:new-repository-01).
 (ref:new-repository-01) New repositories on GitHub can be created by clicking on "New Repository" from the + menu. 
 
 ```{r new-repository-01, fig.cap = '(ref:new-repository-01)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/new_repository_01.png") %>%
-  image_flop() %>%
-  image_crop("3632x1148") %>%
+image_read("img/version_control/new_repository_01.png") |>
+  image_flop() |>
+  image_crop("3632x1148") |>
   image_flop()
 ```
 
@@ -335,9 +335,9 @@ following steps shown in Figure \@ref(fig:new-repository-02):
 4. When you are happy with your repository name and configuration, click on the green "Create Repository" button.
 
 ```{r new-repository-02, fig.cap = 'Repository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/new_repository_02.png") %>%
-  image_flop() %>%
-  image_crop("1700x2240+1000-100") %>%
+image_read("img/version_control/new_repository_02.png") |>
+  image_flop() |>
+  image_crop("1700x2240+1000-100") |>
   image_flop()
 ```
 
@@ -345,9 +345,9 @@ A newly created public repository with a `README.md` template file should look s
 like what is shown in Figure \@ref(fig:new-repository-03).
 
 ```{r new-repository-03, fig.cap = 'Respository configuration for a project that is public and initialized with a README.md template file.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/new_repository_03.png") %>%
-  image_flop() %>%
-  image_crop("3584x1700") %>%
+image_read("img/version_control/new_repository_03.png") |>
+  image_flop() |>
+  image_crop("3584x1700") |>
   image_flop()
 ```
 
@@ -359,16 +359,16 @@ the pen tool the file will be opened in a text box where you can use your
 keyboard to make changes (Figures \@ref(fig:pen-tool-01) and \@ref(fig:pen-tool-02)).
 
 ```{r pen-tool-01, fig.cap = 'Clicking on the pen tool opens a text box for editing plain text files.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/pen-tool_01.png") %>%
-  image_flop() %>%
-  image_crop("3584x1500") %>%
+image_read("img/version_control/pen-tool_01.png") |>
+  image_flop() |>
+  image_crop("3584x1500") |>
   image_flop()
 ```
 
 ```{r pen-tool-02, fig.cap = 'The text box where edits can be made after clicking on the pen tool.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/pen-tool_02.png") %>%
-  # image_flop() %>%
-  image_crop("3584x1300") # %>%
+image_read("img/version_control/pen-tool_02.png") |>
+  # image_flop() |>
+  image_crop("3584x1300") # |>
 # image_flop()
 ```
 
@@ -392,7 +392,7 @@ You can also do things like run code when working in a local repository, which y
 do on GitHub. In general, editing on GitHub is reserved for small edits to plain text files.
 
 ```{r pen-tool-03, fig.cap = 'Saving changes using the pen tool requires committing those changes, and an associated commit message.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/pen-tool_03.png") %>%
+image_read("img/version_control/pen-tool_03.png") |>
   image_crop("3583x1500+1+500")
 ```
 
@@ -404,9 +404,9 @@ down menu and select the "Create new file" option
 (Figure \@ref(fig:create-new-file-01)).
 
 ```{r create-new-file-01, fig.cap = 'New plain text files can be created directly on GitHub.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/create-new-file_01.png") %>%
-  image_flop() %>%
-  image_crop("3584x1600") %>%
+image_read("img/version_control/create-new-file_01.png") |>
+  image_flop() |>
+  image_crop("3584x1600") |>
   image_flop()
 ```
 
@@ -421,9 +421,9 @@ very similar to Jupyter notebooks, so the "Preview" tab is especially helpful
 for checking markdown code correctness.
 
 ```{r create-new-file-02, fig.cap = 'New plain text files require a filename in the text box circled in red, and file content entered in the larger text box (red arrow).', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/create-new-file_02.png") %>%
-  image_flop() %>%
-  image_crop("3584x1300") %>%
+image_read("img/version_control/create-new-file_02.png") |>
+  image_flop() |>
+  image_crop("3584x1300") |>
   image_flop()
 ```
 
@@ -431,7 +431,7 @@ Save and commit your changes by clicking the green "Commit changes" button at th
 bottom of the page (Figure \@ref(fig:create-new-file-03)).
 
 ```{r create-new-file-03, fig.cap = 'To be saved, newly created files are required to be committed along with an associated commit message.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/create-new-file_03.png") %>%
+image_read("img/version_control/create-new-file_03.png") |>
   image_crop("3584x1500+1+500")
 ```
 
@@ -445,18 +445,18 @@ been selected, click the green "Commit changes" button at the bottom of the
 page (Figure \@ref(fig:upload-files-02)).
 
 ```{r upload-files-01, fig.cap = 'New files of any type can be uploaded to GitHub.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/upload-files_01.png") %>%
-  image_flop() %>%
-  image_crop("3584x1600") %>%
+image_read("img/version_control/upload-files_01.png") |>
+  image_flop() |>
+  image_crop("3584x1600") |>
   image_flop()
 ```
 
 (ref:upload-files-02) Specify files to upload by dragging them into the GitHub website (red circle) or by clicking on "choose your files." Uploaded files are also required to be committed along with an associated commit message.
 
 ```{r upload-files-02, fig.cap = '(ref:upload-files-02)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/upload-files_02.png") %>%
-  image_flop() %>%
-  image_crop("3584x2200") %>%
+image_read("img/version_control/upload-files_02.png") |>
+  image_flop() |>
+  image_crop("3584x2200") |>
   image_flop()
 ```
 
@@ -555,7 +555,7 @@ of the Code drop down menu on GitHub (Figure \@ref(fig:clone-02)).
 (ref:clone-02) The remote address (URL) corresponding to the location of the remote GitHub repository can be found in the green "Code" drop down menu.
 
 ```{r clone-02, fig.cap = '(ref:clone-02)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/clone_02.png") %>%
+image_read("img/version_control/clone_02.png") |>
   image_crop("3584x1500")
 ```
 
@@ -563,7 +563,7 @@ Then open Jupyter, and click the Git+ icon on the file browser tab
 (Figure \@ref(fig:clone-01)).
 
 ```{r clone-01, fig.cap = 'The Jupyter Git Clone icon (red circle).', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/clone_01.png") %>%
+image_read("img/version_control/clone_01.png") |>
   image_crop("2400x1430+1")
 ```
 
@@ -571,7 +571,7 @@ Paste the URL of the GitHub project repository you
 created and click the blue "CLONE" button (Figure \@ref(fig:clone-03)).
 
 ```{r clone-03, fig.cap = 'Prompt where the remote address (URL) corresponding to the location of the GitHub repository needs to be input in Jupyter.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/clone_03.png") %>%
+image_read("img/version_control/clone_03.png") |>
   image_crop("2400x1430+1")
 ```
 
@@ -579,7 +579,7 @@ On the file browser tab, you will now see a folder for the repository.
 Inside this folder  will be all the files that existed on GitHub (Figure \@ref(fig:clone-04)).
 
 ```{r clone-04, fig.cap = 'Cloned GitHub repositories can been seen and accessed via the Jupyter file browser.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/clone_04.png") %>%
+image_read("img/version_control/clone_04.png") |>
   image_crop("2400x1430+1")
 ```
 
@@ -688,7 +688,7 @@ you will see that the changes now exist there too
 (Figure \@ref(fig:git-push-04))!
 
 ```{r git-push-04, fig.cap = 'The GitHub web interface shows a preview of the commit message, and the time of the most recently pushed commit for each file.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/git_push_04.png") %>%
+image_read("img/version_control/git_push_04.png") |>
   image_crop("3584x2000")
 ```
 
@@ -705,7 +705,7 @@ projects, navigate to the "Settings" tab (Figure \@ref(fig:add-collab-01)).
 (ref:add-collab-01) The "Settings" tab on the GitHub web interface.
 
 ```{r add-collab-01, fig.cap = '(ref:add-collab-01)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/add_collab_01.png") %>%
+image_read("img/version_control/add_collab_01.png") |>
   image_crop("3584x1250")
 ```
 
@@ -714,7 +714,7 @@ Then click "Manage access" (Figure \@ref(fig:add-collab-02)).
 (ref:add-collab-02) The "Manage access" tab on the GitHub web interface.
 
 ```{r add-collab-02, fig.cap = '(ref:add-collab-02)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/add_collab_02.png") %>%
+image_read("img/version_control/add_collab_02.png") |>
   image_crop("3584x1200")
 ```
 
@@ -724,7 +724,7 @@ Click the green "Invite a collaborator" button
 (ref:add-collab-03) The "Invite a collaborator" button on the GitHub web interface.
 
 ```{r add-collab-03, fig.cap = '(ref:add-collab-03)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/add_collab_03.png") %>%
+image_read("img/version_control/add_collab_03.png") |>
   image_crop("3584x2200")
 ```
 
@@ -732,14 +732,14 @@ Type in the collaborator's GitHub username or email,
 and select their name when it appears (Figure \@ref(fig:add-collab-04)).
 
 ```{r add-collab-04, fig.cap = "The text box where a collaborator's GitHub username or email can be entered.", fig.retina = 2, out.width="100%"}
-image_read("img/version_control/add_collab_04.png") %>%
+image_read("img/version_control/add_collab_04.png") |>
   image_crop("3584x1250")
 ```
 
 Finally, click the green "Add <COLLABORATORS_GITHUB_USER_NAME> to this repository" button (Figure \@ref(fig:add-collab-05)).
 
 ```{r add-collab-05, fig.cap = 'The confirmation button for adding a collaborator to a repository on the GitHub web interface.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/add_collab_05.png") %>%
+image_read("img/version_control/add_collab_05.png") |>
   image_crop("3584x1250")
 ```
 
@@ -755,7 +755,7 @@ to our `eda.ipynb` analysis file that were made by a collaborator
 (Figure \@ref(fig:git-pull-00)).
 
 ```{r git-pull-00, fig.cap = 'The GitHub interface indicates the name of the last person to push a commit to the remote repository, a preview of the associated commit message, the unique commit identifier, and how long ago the commit was snapshotted.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/git_pull_00.png") %>%
+image_read("img/version_control/git_pull_00.png") |>
   image_crop("3584x1900")
 ```
 
@@ -799,7 +799,7 @@ This situation can be recognized by the error message
 shown in Figure \@ref(fig:merge-conflict-01).
 
 ```{r merge-conflict-01, fig.cap = 'Error message that indicates that there are changes on the remote repository that you do not have locally.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/merge_conflict_01.png") %>%
+image_read("img/version_control/merge_conflict_01.png") |>
   image_crop("3584x1900")
 ```
 
@@ -816,7 +816,7 @@ version of the line(s), or some blend of the two. When this happens, Git will
 tell you that you have a merge conflict in certain file(s) (Figure \@ref(fig:merge-conflict-03)).
 
 ```{r merge-conflict-03, fig.cap = 'Error message that indicates you and your collaborators made changes to the same line of the same file and that Git will not be able to automatically merge the changes.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/merge_conflict_03.png") %>%
+image_read("img/version_control/merge_conflict_03.png") |>
   image_crop("3584x1900")
 ```
 
@@ -827,7 +827,7 @@ in a plain text editor and look for special marks that Git puts in the file to
 tell you where the merge conflict occurred (Figure \@ref(fig:merge-conflict-04)). 
 
 ```{r merge-conflict-04, fig.cap = 'How to open a Jupyter notebook as a plain text file view in Jupyter.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/merge_conflict_04.png") %>%
+image_read("img/version_control/merge_conflict_04.png") |>
   image_crop("3584x1200")
 ```
 
@@ -841,7 +841,7 @@ there is a line of code that calls `scale_color_manual` with three color values 
 It looks like your collaborator made an edit to that line too, except with different colors (to `blue3`, `red3`, and `black`)!
 
 ```{r merge-conflict-05, fig.cap = 'Merge conflict identifiers (highlighted in red).', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/merge_conflict_05.png") %>%
+image_read("img/version_control/merge_conflict_05.png") |>
   image_crop("3584x1200")
 ```
 
@@ -850,7 +850,7 @@ keep, you need to use the plain text editor to remove the special marks that
 Git added (Figure \@ref(fig:merge-conflict-06)).  
 
 ```{r merge-conflict-06, fig.cap = 'File where a merge conflict has been resolved.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/merge_conflict_06.png") %>%
+image_read("img/version_control/merge_conflict_06.png") |>
   image_crop("3584x1200")
 ```
 
@@ -884,7 +884,7 @@ first click on the "Issues" tab (Figure \@ref(fig:issue-01)).
 (ref:issue-01) The "Issues" tab on the GitHub web interface.
 
 ```{r issue-01, fig.cap = '(ref:issue-01)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/issue_01.png") %>%
+image_read("img/version_control/issue_01.png") |>
   image_crop("3584x1250")
 ```
 
@@ -893,7 +893,7 @@ Next click the "New issue" button (Figure \@ref(fig:issue-02)).
 (ref:issue-02) The "New issues" button on the GitHub web interface.
 
 ```{r issue-02, fig.cap = '(ref:issue-02)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/issue_02.png") %>%
+image_read("img/version_control/issue_02.png") |>
   image_crop("3584x1250")
 ```
 
@@ -902,7 +902,7 @@ body of the message in the larger text box. Finally click "Submit new issue"
 to post the issue to share with others (Figure \@ref(fig:issue-03)).
 
 ```{r issue-03, fig.cap = 'Dialog boxes and submission button for creating new GitHub issues.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/issue_03.png") %>%
+image_read("img/version_control/issue_03.png") |>
   image_crop("3584x2200")
 ```
 
@@ -910,7 +910,7 @@ You can reply to an issue that someone opened by adding your written response to
 the large text box and clicking comment (Figure \@ref(fig:issue-04)).
 
 ```{r issue-04, fig.cap = 'Dialog box for replying to GitHub issues.', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/issue_04.png") %>%
+image_read("img/version_control/issue_04.png") |>
   image_crop("3584x2000")
 ```
 
@@ -921,7 +921,7 @@ in the "Issue" tab (Figure \@ref(fig:issue-06)).
 (ref:issue-06) The "Closed" issues tab on the GitHub web interface.
 
 ```{r issue-06, fig.cap = '(ref:issue-06)', fig.retina = 2, out.width="100%"}
-image_read("img/version_control/issue_06.png") %>%
+image_read("img/version_control/issue_06.png") |>
   image_crop("3584x1900")
 ```
 
