--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -3,21 +3,21 @@
 We'd like to thank everyone that has contributed to the development of 
 [*Data Science: A First Introduction*](https://ubc-dsci.github.io/introduction-to-datascience/). 
 This is an open source textbook that began as a collection of course readings
-for a new introductory data science course 
-at the University of British Columbia (UBC), DSCI 100.
+for DSCI 100, a new introductory data science course 
+at the University of British Columbia (UBC).
 Several faculty members in the UBC Department of Statistics 
 were pivotal in shaping the direction of that course, 
-and as such contributed greatly to the shape and direction of this book. 
-We would especially like to thank Matías Salibían-Barrera 
-for his great mentoring during the roll out of this course 
-and book in the early days.
-His door was always open to chat about how to best introduce 
-and teach data science our first year students.
+and as such contributed greatly to the broad structure and 
+list of topics in this book. We would especially like to thank Matías
+Salibían-Barrera for his mentorship during the initial development and roll-out
+of both DSCI 100 and this book. His door was always open when
+we needed to chat about how to
+best introduce and teach data science our first year students.
 
-Much acknowledgements 
-and thanks to shaping this book goes to the DSCI 100 students.
-Their enthusiasm to learn data science sustained us during the hard work 
-of creating a new course and writing a textbook.
-Their patience when they uncovered bugs in the book was much needed.
-Their feedback on the book and the course, 
-really has contributed to making the book what it is today.
+We would also owe a debt of gratitude to all of the students of DSCI 100 over the past
+few years. They provided invaluable feedback on the book and worksheets; 
+they found bugs for us (and stood by very patiently in class while 
+we frantically fixed those bugs); and they brought a level of enthusiasm to the class
+that sustained us during the hard work of creating a new course and writing a textbook.
+Our interactions with them taught us how to teach data science, and that learning
+is reflected in the content of this book. 
