minor ed to acks

--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -14,7 +14,7 @@ of both DSCI 100 and this book. His door was always open when
 we needed to chat about how to
 best introduce and teach data science our first year students.
 
-We would also owe a debt of gratitude to all of the students of DSCI 100 over the past
+We also owe a debt of gratitude to all of the students of DSCI 100 over the past
 few years. They provided invaluable feedback on the book and worksheets; 
 they found bugs for us (and stood by very patiently in class while 
 we frantically fixed those bugs); and they brought a level of enthusiasm to the class
