--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -437,9 +437,9 @@ There each row corresponds to an iteration,
 where the left column depicts the center update, 
 and the right column depicts the reassignment of data to clusters.
 
-(ref:10-toy-kmeans-iter) First four iterations of K-means clustering on the `penguin_data` example data set. Each row corresponds to an iteration, where the left column depicts the center update, and the right column depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black.
+(ref:10-toy-kmeans-iter) First four iterations of K-means clustering on the `penguin_data` example data set. Each pair of plots corresponds to an iteration. Within the pair, the left column depicts the center update, and the right column depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black.
 
-```{r 10-toy-kmeans-iter, echo = FALSE, warning = FALSE, fig.height = 16, fig.width = 8, fig.align = "center", fig.cap = "(ref:10-toy-kmeans-iter)"}
+```{r 10-toy-kmeans-iter, echo = FALSE, warning = FALSE, fig.height = 4.5, fig.width = 8, fig.align = "center", fig.cap = "(ref:10-toy-kmeans-iter)"}
 list_plot_cntrs <- vector(mode = "list", length = 4)
 list_plot_lbls <- vector(mode = "list", length = 4)
 
@@ -454,22 +454,22 @@ for (i in 1:4) {
                                       x = flipper_length_standardized, 
                                       color = label)) +
     geom_point(size = 2) +
-    xlab("Flipper Length (standardized)") +
-    ylab("Bill Length (standardized)") +
+    xlab("Flipper Length\n(standardized)") +
+    ylab("Bill Length\n(standardized)") +
     theme(legend.position = "none") +
     scale_color_manual(values= cbpalette) + 
     geom_point(data = centers, 
                aes(y = bill_length_standardized, 
                                    x = flipper_length_standardized, 
                                    fill = label), 
-               size = 5, 
+               size = 3, 
                shape = 21, 
-               stroke = 2, 
+               stroke = 1, 
                color = "black", 
                fill = cbpalette) +
-    annotate("text", x = -1.15, y = 1.8, label = paste0("Iteration ", i))
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
   
-  if (i == 1) {
+  if (i == 1 | i == 2) {
     plt_ctr <- plt_ctr +
       ggtitle("Center Update")
   }
@@ -488,20 +488,21 @@ for (i in 1:4) {
                         x = flipper_length_standardized, 
                         color = label)) +
     geom_point(size = 2) +
-    xlab("Flipper Length (standardized)") +
-    ylab("Bill Length (standardized)") +
+    xlab("Flipper Length\n(standardized)") +
+    ylab("Bill Length\n(standardized)") +
     theme(legend.position = "none") +
     scale_color_manual(values= cbpalette) +
     geom_point(data = centers, 
                aes(y = bill_length_standardized, 
                    x = flipper_length_standardized, fill = label), 
-               size = 5, 
+               size = 3, 
                shape = 21, 
-               stroke = 2, 
+               stroke = 1, 
                color = "black", 
-               fill = cbpalette) 
+               fill = cbpalette) +
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
 
-  if (i == 1) {
+  if (i == 1 | i ==2) {
     plt_lbl <- plt_lbl +
       ggtitle("Label Update")
   }
@@ -516,8 +517,8 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
                     list_plot_cntrs[4], list_plot_lbls[4])
 
 plot_grid(plotlist = iter_plot_list, 
-          ncol = 2,
-          rel_heights = c(1.065, 1, 1, 1))
+          nrow = 2,
+          rel_heights = c(1.15, 1))
 ```
 
 Note that at this point, we can terminate the algorithm since none of the assignments changed
@@ -565,9 +566,9 @@ plt_lbl
 
 Figure \@ref(fig:10-toy-kmeans-bad-iter) shows what the iterations of K-means would look like with the unlucky random initialization shown in Figure \@ref(fig:10-toy-kmeans-bad-init).
 
-(ref:10-toy-kmeans-bad-iter) First five iterations of K-means clustering on the `penguin_data` example data set with a poor random initialization. Each row corresponds to an iteration, where the left column depicts the center update, and the right column depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black.
+(ref:10-toy-kmeans-bad-iter) First five iterations of K-means clustering on the `penguin_data` example data set with a poor random initialization. Each pair of plots corresponds to an iteration. Within the pair, the left column depicts the center update, and the right column depicts the reassignment of data to clusters. Cluster centers are indicated by larger points that are outlined in black.
 
-```{r 10-toy-kmeans-bad-iter, echo = FALSE, warning = FALSE, fig.height = 20, fig.width = 8, fig.align = "center", fig.cap = "(ref:10-toy-kmeans-bad-iter)"}
+```{r 10-toy-kmeans-bad-iter, echo = FALSE, warning = FALSE, fig.height = 6.75, fig.width = 8, fig.align = "center", fig.cap = "(ref:10-toy-kmeans-bad-iter)"}
 list_plot_cntrs <- vector(mode = "list", length = 5)
 list_plot_lbls <- vector(mode = "list", length = 5)
 
@@ -582,21 +583,21 @@ for (i in 1:5) {
                                       x = flipper_length_standardized, 
                                       color = label)) +
     geom_point(size = 2) +
-    xlab("Flipper Length (standardized)") +
-    ylab("Bill Length (standardized)") +
+    xlab("Flipper Length\n(standardized)") +
+    ylab("Bill Length\n(standardized)") +
     theme(legend.position = "none") +
     scale_color_manual(values= cbpalette) + 
     geom_point(data = centers, aes(y = bill_length_standardized, 
                                    x = flipper_length_standardized, 
                                    fill = label), 
-               size = 5, 
+               size = 3, 
                shape = 21, 
-               stroke = 2, 
+               stroke = 1, 
                color = "black", 
                fill = cbpalette) +
-    annotate("text", x = -1.15, y = 1.8, label = paste0("Iteration ", i))
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
 
-  if (i == 1) {
+  if (i == 1 | i == 2) {
     plt_ctr <- plt_ctr +
       ggtitle("Center Update")
   }
@@ -614,20 +615,21 @@ for (i in 1:5) {
                                       x = flipper_length_standardized, 
                                       color = label)) +
     geom_point(size = 2) +
-    xlab("Flipper Length (standardized)") +
-    ylab("Bill Length (standardized)") +
+    xlab("Flipper Length\n(standardized)") +
+    ylab("Bill Length\n(standardized)") +
     theme(legend.position = "none") +
     scale_color_manual(values= cbpalette) +
     geom_point(data = centers, aes(y = bill_length_standardized, 
                                    x = flipper_length_standardized, 
                                    fill = label), 
-               size = 5, 
+               size = 3, 
                shape = 21, 
-               stroke = 2, 
+               stroke = 1, 
                color = "black", 
-               fill = cbpalette)
+               fill = cbpalette) +
+    annotate("text", x = -0.5, y = 1.5, label = paste0("Iteration ", i))
 
-  if (i == 1) {
+  if (i == 1 | i == 2) {
     plt_lbl <- plt_lbl +
       ggtitle("Label Update")
   }
@@ -643,8 +645,8 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
                     list_plot_cntrs[5], list_plot_lbls[5])
 
 plot_grid(plotlist = iter_plot_list, 
-          ncol = 2,
-          rel_heights = c(1.065, 1, 1, 1, 1))
+          ncol = 4,
+          rel_heights = c(1.10, 1, 1))
 ```
 
 This looks like a relatively bad clustering of the data, but K-means cannot improve it.
