removing axes labels in between plots, making a common label

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -6,6 +6,8 @@ library(RColorBrewer)
 library(gridExtra)
 library(cowplot)
 library(broom)
+library(egg) # ggarrange
+
 
 #center breaks latex here
 knitr::opts_chunk$set(warning = FALSE, fig.align = "default") 
@@ -516,9 +518,52 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
                     list_plot_cntrs[3], list_plot_lbls[3],
                     list_plot_cntrs[4], list_plot_lbls[4])
 
-plot_grid(plotlist = iter_plot_list, 
-          nrow = 2,
-          rel_heights = c(1.15, 1))
+ggarrange(iter_plot_list[[1]] +
+               theme(axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(), 
+                     plot.margin = margin(r = 2, b = 2)), 
+          iter_plot_list[[2]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, b = 2) ), 
+          iter_plot_list[[3]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, b = 2)  ),
+          iter_plot_list[[4]] + 
+            theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(), 
+                     axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(l = 2, b = 2)  ),
+          iter_plot_list[[5]] +
+               theme(plot.margin = margin(r = 2, t = 2)), 
+          iter_plot_list[[6]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, t = 2) ), 
+          iter_plot_list[[7]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, t = 2)  ),
+          iter_plot_list[[8]] + theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(), 
+                     plot.margin = margin(l = 2, t = 2)  ),
+           nrow = 2)
 ```
 
 Note that at this point, we can terminate the algorithm since none of the assignments changed
@@ -644,9 +689,71 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
                     list_plot_cntrs[4], list_plot_lbls[4],
                     list_plot_cntrs[5], list_plot_lbls[5])
 
-plot_grid(plotlist = iter_plot_list, 
-          ncol = 4,
-          rel_heights = c(1.10, 1, 1))
+# plot_grid(plotlist = iter_plot_list, 
+#           ncol = 4,
+#           rel_heights = c(1.10, 1, 1))
+
+
+
+ggarrange(iter_plot_list[[1]] +
+               theme(axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(), 
+                     plot.margin = margin(r = 2, b = 2)), 
+          iter_plot_list[[2]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, b = 2) ), 
+          iter_plot_list[[3]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, b = 2)),
+          iter_plot_list[[4]] + 
+            theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(), 
+                     axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(l = 2, b = 2) ),
+          iter_plot_list[[5]] +
+               theme(axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(r = 2, t = 2, b = 1)),
+          iter_plot_list[[6]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     axis.text.x = element_blank(),
+                     axis.ticks.x = element_blank(),
+                     axis.title.x = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, t = 2, b = 1) ), 
+          iter_plot_list[[7]] + 
+               theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(),
+                     plot.margin = margin(r = 2, l = 2, t = 2, b = 2)  ),
+          iter_plot_list[[8]] + theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(), 
+                     plot.margin = margin(l = 2, t = 2, b = 2)),  
+          iter_plot_list[[9]] + 
+               theme(plot.margin = margin(r = 2)),
+          iter_plot_list[[10]] + 
+            theme(axis.text.y = element_blank(),
+                     axis.ticks.y = element_blank(),
+                     axis.title.y = element_blank(), 
+                     plot.margin = margin(l = 2)  ),
+           ncol = 4)
 ```
 
 This looks like a relatively bad clustering of the data, but K-means cannot improve it.
