--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -848,7 +848,7 @@ a balance between the two. You can see these two effects in Figure
 \@ref(fig:06-decision-grid-K), which shows how the classifier changes as 
 we set the number of neighbors $K$ to 1, 7, 20, and 300.
 
-```{r 06-decision-grid-K, echo = FALSE, message = FALSE, fig.height = 7, fig.width = 10, fig.cap = "Effect of K in overfitting and underfitting."}
+```{r 06-decision-grid-K, echo = FALSE, message = FALSE, fig.height = 10, fig.width = 10, fig.cap = "Effect of K in overfitting and underfitting."}
 ks <- c(1, 7, 20, 300)
 plots <- list()
 
@@ -895,7 +895,10 @@ for (i in 1:length(ks)) {
     scale_color_manual(labels = c("Malignant", "Benign"), 
                        values = c("orange2", "steelblue2"))
 }
-grid.arrange(grobs = plots)
+p_no_legend <- lapply(plots, function(x) x + theme(legend.position = "none"))
+legend <- get_legend(plots[[1]] + theme(legend.position = "bottom"))
+p_grid <- plot_grid(plotlist = p_no_legend, ncol = 2)
+plot_grid(p_grid, legend, ncol = 1, rel_heights = c(1, 0.2))
 ```
 
 ## Summary
