adjusting clustering plot

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -693,6 +693,7 @@ iter_plot_list <- c(list_plot_cntrs[1], list_plot_lbls[1],
 #           ncol = 4,
 #           rel_heights = c(1.10, 1, 1))
 
+ggarrange(plots = iter_plot_list, ncol =4, common.legend = TRUE)
 
 
 ggarrange(iter_plot_list[[1]] +
@@ -746,6 +747,7 @@ ggarrange(iter_plot_list[[1]] +
                      axis.ticks.y = element_blank(),
                      axis.title.y = element_blank(), 
                      plot.margin = margin(l = 2, t = 2, b = 2)),  
+          ggplot() + theme_void(), ggplot() + theme_void(), ggplot() + theme_void(), ggplot() + theme_void(),
           iter_plot_list[[9]] + 
                theme(plot.margin = margin(r = 2)),
           iter_plot_list[[10]] + 
@@ -753,7 +755,8 @@ ggarrange(iter_plot_list[[1]] +
                      axis.ticks.y = element_blank(),
                      axis.title.y = element_blank(), 
                      plot.margin = margin(l = 2)  ),
-           ncol = 4)
+         heights = c(4, 4, -1, 4),
+          ncol = 4)
 ```
 
 This looks like a relatively bad clustering of the data, but K-means cannot improve it.
