changing figure sizes to histograms in viz

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -1024,7 +1024,7 @@ To create a histogram in `ggplot2` we will use the `geom_histogram` geometric
 object, setting the `x` axis to the `Speed` measurement variable. As usual, 
 let's use the default arguments just to see how things look.
 
-```{r 03-data-morley-hist, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data."}
+```{r 03-data-morley-hist, warning=FALSE, message=FALSE,  fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Histogram of Michelson's speed of light data."}
 morley_hist <- ggplot(morley, aes(x = Speed)) +
   geom_histogram()
 
@@ -1054,7 +1054,7 @@ Note that
 *vertical lines* are used to denote quantities on the *horizontal axis*, 
 while *horizontal lines* are used to denote quantities on the *vertical axis*. 
 
-```{r 03-data-morley-hist-2, warning=FALSE, message=FALSE,fig.cap = "Histogram of Michelson's speed of light data with vertical line indicating true speed of light."}
+```{r 03-data-morley-hist-2, warning=FALSE,  fig.height = 3.5, fig.width = 4.5, fig.align = "center", message=FALSE,fig.cap = "Histogram of Michelson's speed of light data with vertical line indicating true speed of light."}
 morley_hist <- ggplot(morley, aes(x = Speed)) +
   geom_histogram() +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1)
@@ -1083,7 +1083,7 @@ instead of stacked bars
 (which is the default for bar plots or histograms 
 when they are colored by another categorical variable).
 
-```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment."}
+```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE,  fig.height = 3.5, fig.width = 4.5, fig.align = "center", fig.cap = "Histogram of Michelson's speed of light data colored by experiment."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
   geom_histogram(alpha = 0.5, position = "identity") +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
@@ -1107,7 +1107,7 @@ categories. By writing
 and the color will be mapped discretely.
 \index{factor!usage in ggplot}
 
-```{r 03-data-morley-hist-with-factor, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data colored by experiment as factor."}
+```{r 03-data-morley-hist-with-factor, warning=FALSE, message=FALSE,  fig.height = 3.5, fig.width = 5.5, fig.align = "center", fig.cap = "Histogram of Michelson's speed of light data colored by experiment as factor."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
   geom_histogram(alpha = 0.5, position = "identity") +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
@@ -1146,7 +1146,7 @@ This function allows the column names to be correctly evaluated
 in the context of the data frame.
 \index{ggplot!facet\_grid}
 
-```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment."}
+```{r 03-data-morley-hist-4, warning=FALSE, message=FALSE, fig.height = 7, fig.align = "center", fig.cap = "Histogram of Michelson's speed of light data split vertically by experiment."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
   geom_histogram() +
   facet_grid(rows = vars(Expt)) +
@@ -1171,7 +1171,7 @@ of just how accurate all the experiments were overall. For example, how accurate
 To answer this question, we'll use the `mutate` function to transform our data into a relative measure of accuracy rather than absolute measurements:
 \index{ggplot!labs}\index{ggplot!theme}
 
-```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels."}
+```{r 03-data-morley-hist-5, warning=FALSE, message=FALSE, fig.height = 7, fig.align = "center", fig.cap = "Histogram of relative accuracy split vertically by experiment with clearer axes and labels."}
 morley_rel <- mutate(morley, 
                      relative_accuracy = 100 * 
                        ((299000 + Speed) - 299792.458) / (299792.458))
@@ -1227,7 +1227,7 @@ In this case, we can see that both the default number of bins
 and the binwidth of 0.01 are effective for helping answer our question.
 On the other hand, the bin widths of 0.001 and 0.1 are too small and too big, respectively.
 
-```{r 03-data-morley-hist-binwidth, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 10, fig.cap = "Effect of varying bin width on histograms."}
+```{r 03-data-morley-hist-binwidth, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 10, fig.align = "center", fig.cap = "Effect of varying bin width on histograms."}
 morley_hist_default <- ggplot(morley_rel, 
                               aes(x = relative_accuracy, 
                                   fill = as_factor(Expt))) +
@@ -1294,7 +1294,7 @@ For example, if we wanted to add a title to the last plot we created (`morley_hi
 we can use the `+` operator to add a title layer with the `ggtitle` function.
 The result is shown in Figure \@ref(fig:03-data-morley-hist-addlayer).
 
-```{r 03-data-morley-hist-addlayer, warning = FALSE, message = FALSE, fig.height = 7, fig.cap = "Histogram of relative accuracy split vertically by experiment with a descriptive title highlighting the take home message of the visualization."}
+```{r 03-data-morley-hist-addlayer, warning = FALSE, message = FALSE, fig.height = 7, fig.align = "center", fig.cap = "Histogram of relative accuracy split vertically by experiment with a descriptive title highlighting the take home message of the visualization."}
 morley_hist_title <- morley_hist +
   ggtitle("Speed of light experiments \n were accurate to about 0.05%")
 
@@ -1428,7 +1428,7 @@ scatter plot of
 the [Old Faithful data set](https://www.stat.cmu.edu/~larry/all-of-statistics/=data/faithful.dat) [@faithfuldata],
 shown in Figure \@ref(fig:03-plot-line).
 
-```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.width = 4.5, fig.height = 3.75, fig.cap = "Scatter plot of waiting time and eruption time."}
+```{r 03-plot-line, collapse=TRUE, warning=FALSE, message=FALSE, fig.width = 3.75, fig.height = 3.5, fig.cap = "Scatter plot of waiting time and eruption time."}
 library(svglite) # we need this to save SVG files
 faithful_plot <- ggplot(data = faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
