common legend for standardized nonstandardized plot

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -5,6 +5,7 @@ library(formatR)
 library(plotly)
 library(knitr)
 library(kableExtra)
+library(ggpubr)
 
 knitr::opts_chunk$set(echo = TRUE, 
                       fig.align = "center")
@@ -903,7 +904,7 @@ Standardizing your data should be a part of the preprocessing you do
 before predictive modeling and you should always think carefully about your problem domain and
 whether you need to standardize your data. 
 
-```{r 05-scaling-plt, echo = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of K = 3 nearest neighbors with standardized and unstandardized data."}
+```{r 05-scaling-plt, echo = FALSE, fig.height = 4, fig.cap = "Comparison of K = 3 nearest neighbors with standardized and unstandardized data."}
 
 attrs <- c("Area", "Smoothness")
 
@@ -994,7 +995,8 @@ scaled <- ggplot(scaled_cancer, aes(x = Area,
     yend = unlist(neighbors_scaled[3, attrs[2]])
   ), color = "black", size = 0.5)
 
-gridExtra::grid.arrange(unscaled, scaled, ncol = 2)
+ggarrange(unscaled, scaled, ncol = 2, common.legend = TRUE, legend = "bottom")
+
 ```
 
 ```{r 05-scaling-plt-zoomed, fig.height = 4, fig.width = 10, echo = FALSE, fig.cap = "Close up of three nearest neighbors for unstandardized data."}
