making common legend for effect of k plot

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -2,6 +2,7 @@
 
 ```{r classification2-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(gridExtra)
+library(cowplot)
 
 knitr::opts_chunk$set(fig.align = "center")
 ```
@@ -893,8 +894,9 @@ for (i in 1:length(ks)) {
     labs(color = "Diagnosis") +
     ggtitle(paste("K = ", ks[[i]])) +
     scale_color_manual(labels = c("Malignant", "Benign"), 
-                       values = c("orange2", "steelblue2"))
-}
+                       values = c("orange2", "steelblue2")) 
+  }
+
 p_no_legend <- lapply(plots, function(x) x + theme(legend.position = "none"))
 legend <- get_legend(plots[[1]] + theme(legend.position = "bottom"))
 p_grid <- plot_grid(plotlist = p_no_legend, ncol = 2)
