--- a/pdf/latex/before_body.tex
+++ b/pdf/latex/before_body.tex
@@ -6,9 +6,12 @@
 \thispagestyle{empty}
 
 \begin{center}
-To you, the Reader.
+For my husband Curtis and daughter Rowan. Thank-you for your love 
+\linebreak(and patience with my late night writing).
+\linebreak-- Tiffany
 
-Never stop learning. You are capable of anything.
+To mom and dad: here's a book. Pretty neat, eh? Love you guys.
+\linebreak-- Trevor
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
